package service

import (
	"context"

	"github.com/dream-horizon-org/odin/pkg/constant"
	auth "github.com/dream-horizon-org/odin/proto/gen/go/dream11/od/auth/v1"
	log "github.com/sirupsen/logrus"
)

// Configure used to perform odin configure
type Configure struct{}

// GetAuthProvider Get Auth Provider
func (c *Configure) GetAuthProvider(ctx *context.Context, request *auth.GetAuthProviderRequest) (*auth.GetAuthProviderResponse, error) {
	conn, requestCtx, err := grpcClient(ctx)
	if err != nil {
		return nil, err
	}
	client := auth.NewAuthServiceClient(conn)
	response, err := client.GetAuthProvider(*requestCtx, request)
	if err != nil {
		log.Errorf("TraceID: %s", (*requestCtx).Value(constant.TraceIDKey))
		return nil, err
	}

	return response, nil
}

// GetUserToken Get User Token
func (c *Configure) GetUserToken(ctx *context.Context, request *auth.GetUserTokenRequest) (*auth.GetUserTokenResponse, error) {
	conn, requestCtx, err := grpcClient(ctx)
	if err != nil {
		return nil, err
	}
	client := auth.NewAuthServiceClient(conn)
	response, err := client.GetUserToken(*requestCtx, request)
	if err != nil {
		log.Errorf("TraceID: %s", (*requestCtx).Value(constant.TraceIDKey))
		return nil, err
	}

	return response, nil
}
